<resources>
    <string name="app_name">Awesome Notes</string>
    <string name="start">Start</string>
    <string name="update_profile">Update</string>
    <string name="logout">Logout</string>
    <string name="user_name">Username</string>
    <string name="add_new_note">Add a new note</string>
    <string name="settings">Settings</string>
    <string name="canceled_sign_in">You have cancelled the sign in!</string>
    <string name="creation_date">Creation date:</string>
    <string name="last_edit">Last edit:</string>
    <string name="note_title">Title</string>
    <string name="note_description">Description</string>
    <string name="note_body">Body</string>
    <string name="error_camera">Error taking photo from camera</string>
    <string name="profile_update_successfully">Profile updated Successfully..</string>
    <string name="profile_has_not_changed">Profile has not changed..</string>
    <string name="new_user">New User!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="note_deleted">Note deleted</string>
    <string name="undo">Undo</string>
    <string name="make_copy">Make a copy</string>
    <string name="select_app">Select an app:</string>
    <string name="one_time_register">Notes protected and available Online.</string>
    <string name="notes_pictures">Share your notes with friends.</string>
    <string name="notes_external_card">Left swipe to delete a note and undo option.</string>
    <string name="title_onboarding">Secure your notes</string>
    <string name="title_picture_onboarding">Shares your notes</string>
    <string name="title_memory_onboarding">Easy delete your notes</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="title_no_empty">Title cannot be empty..</string>
    <string name="note_has_been_copied">Note has been copied..</string>
</resources>
